# protocolopt

./: .gitignore  404.html  LICENSE  README.md  aim_callback.py  bit_erase_training.py  bitflip_main_kyle.py  bitflip_training.py  config_bitflip.yaml  environment.yaml  index.html  initial_condition_generator.py  loss_classes.py  loss_methods.py  mkdocs.yml  nand_training.py  objects.inv  opt_kyle.py  optimal_control_model.py  plot.py  plotting_callbacks.py  potential.py  potential_model.py  pyproject.toml  sim_engine.py  simulation.py  training_main.py  utils.py
.aim/: run_metadata.sqlite
.aim/meta/index/: IDENTITY  LOG
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml
.github/workflows/: docs.yml
docs/: index.md  roadmap.md
docs/reference/: callbacks.md  core.md  losses.md  potentials.md  protocols.md  sampling.md  simulators.md
examples/: bit_erase_training.py  bitflip_training.py  nand_training.py
mathias_code/: debugging_gradients.py  loss_classes.py  potential.py  potential_model.py  sim_engine.py  simulation.py  training_main.py
reference/callbacks/: index.html
reference/core/: index.html
reference/losses/: index.html
reference/potentials/: index.html
reference/protocols/: index.html
reference/sampling/: index.html
reference/simulators/: index.html
roadmap/: index.html
search/: search_index.json
src/protocolopt/: __init__.py  utils.py
src/protocolopt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/protocolopt/callbacks/: __init__.py  aim.py  physics.py  plotting.py
tests/: test_protocol.py
(+68 files in other folders)
