[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protocolopt"
version = "0.1.0"
description = "Protocol Optimization Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "tqdm",
    "aim",
    "matplotlib",
    "pillow",
    "numpy",
    "pyro-ppl",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["protocolopt*"]
