[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protocolopt"
version = "0.1.0"
description = "Optimization of physical protocols using PyTorch"
authors = [{ name = "Mathias Van Patten", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy",
    "tqdm",
    "matplotlib",
    "pyro-ppl",
    "Pillow",
]

[project.optional-dependencies]
tracking = ["aim"]

[tool.setuptools.packages.find]
where = ["src"]
